RESOLVED FIXED167508
Fix PageCache diagnostic logging
https://bugs.webkit.org/show_bug.cgi?id=167508
Summary Fix PageCache diagnostic logging
Chris Dumez
Reported 2017-01-27 09:46:22 PST
Fix PageCache diagnostic logging. It should not call logDiagnosticMessageWithValue() with a non-numeric value.
Attachments
Patch (4.83 KB, patch)
2017-01-27 09:47 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-27 09:47:42 PST
WebKit Commit Bot
Comment 2 2017-01-27 11:16:18 PST
Comment on attachment 299937 [details] Patch Clearing flags on attachment: 299937 Committed r211291: <http://trac.webkit.org/changeset/211291>
WebKit Commit Bot
Comment 3 2017-01-27 11:16:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.