Fix PageCache diagnostic logging https://bugs.webkit.org/show_bug.cgi?id=167508

Reviewed by Sam Weinig.

Fix PageCache diagnostic logging. It should not call logDiagnosticMessageWithValue()
with a non-numeric value. Use logDiagnosticMessage() instead.

* history/PageCache.cpp:
(WebCore::logPageCacheFailureDiagnosticMessage):
(WebCore::canCacheFrame):
* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::pageCacheFailureKey):
(WebCore::DiagnosticLoggingKeys::successKey): Deleted.
(WebCore::DiagnosticLoggingKeys::failureKey): Deleted.
* page/DiagnosticLoggingKeys.h:


Canonical link: https://commits.webkit.org/184543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211291 268f45cc-cd09-0410-ab3c-d52691b4dbfc